modal added for booking

--- a/frontend/src/components/bookings/Bookings.css
+++ b/frontend/src/components/bookings/Bookings.css
@@ -294,3 +294,145 @@
 .active {
   background: red;
 }
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #00000080;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 50;
+  padding: 16px;
+}
+
+.modal-content {
+  background: #222a3a;
+  border: 1px solid #333b4d;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 512px;
+  box-shadow: 0px 10px 25px #0003;
+  animation: modalFadeIn 0.2s ease-out;
+}
+
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.modal-header {
+  padding: 4px 24px;
+  border-bottom: 1px solid #333b4d;
+}
+
+.modal-title {
+  font-size: 20px;
+  font-weight: 600;
+  color: #f2f2f2;
+  margin-bottom: 8px;
+}
+
+.modal-description {
+  font-size: 14px;
+  color: #a6a6a6;
+}
+
+.modal-body {
+  padding: 8px 24px;
+}
+
+.modal-detail-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 8px;
+  /* margin-bottom: 16px; */
+}
+
+.modal-detail-row.modal-total {
+  /* padding: 16px; */
+  border-top: 1px solid #333b4d;
+  margin-bottom: 0;
+}
+
+.detail-label {
+  color: #a6a6a6;
+  font-size: 14px;
+}
+
+.detail-value {
+  color: #f2f2f2;
+  font-weight: 500;
+  text-align: right;
+}
+
+.detail-value-total {
+  color: #dc2828;
+  font-weight: 700;
+  font-size: 20px;
+  text-align: right;
+}
+
+.modal-footer {
+  padding: 24px;
+  border-top: 1px solid #333b4d;
+  display: flex;
+  gap: 12px;
+  justify-content: flex-end;
+}
+
+.modal-button {
+  padding: 8px 16px;
+  border-radius: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s;
+  border: 1px solid #333b4d;
+}
+
+.modal-button-cancel {
+  background-color: transparent;
+  color: #f2f2f2;
+}
+
+.modal-button-cancel:hover {
+  background-color: #dc2828;
+}
+
+.modal-button-confirm {
+  background-color: #dc2828;
+  color: #ffffff;
+  border: #dc2828;
+}
+
+.modal-button-confirm:hover {
+  background-color: #dc2828e6;
+}
+
+.message {
+  position: fixed;
+  top: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 1px solid #dc2828e6;
+  padding: 0 10px;
+  width: 150px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #dc2828e6;
+  color: white;
+  border-radius: 4px;
+  z-index: 9999;
+}
