--- a/frontend/src/components/movies/Movies.css
+++ b/frontend/src/components/movies/Movies.css
@@ -31,6 +31,12 @@
   cursor: pointer;
 }
 
+@media (min-width: 768px) {
+  .movies-cards {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 .movies-card:hover {
   border-color: hsl(0 72% 51%);
 }
@@ -68,4 +74,26 @@
 
 .movies-book-button:hover {
   background: #dc2828e6;
+}
+
+.search-movies {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input {
+  background: #222a3a;
+  outline: none;
+  border: 1px solid #333b4d;
+  color: #f2f2f2;
+  padding: 8px 16px;
+  font-size: 16px;
+  width: 50%;
+  margin-bottom: 2rem;
+  border-radius: 6px;
+}
+
+.search-input:focus {
+  border: 1px solid #dc2828;
 }
